[gd_scene load_steps=8 format=3 uid="uid://8gn6cec3mvwc"]

[ext_resource type="Script" path="res://Art/Veggie_Shooter/veggie_shooter.gd" id="1_qsbif"]
[ext_resource type="Texture2D" uid="uid://d2ef5fnj72kbe" path="res://Art/Veggie_Shooter/veggie_shooter.png" id="2_qf17j"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p6xpr"]
radius = 20.0
height = 66.0

[sub_resource type="Animation" id="Animation_cebtf"]
resource_name = "Hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slime:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="Animation" id="Animation_6egce"]
resource_name = "Normal"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ftcw"]
_data = {
"Hurt": SubResource("Animation_cebtf"),
"Normal": SubResource("Animation_6egce")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_cq4vn"]
radius = 510.251

[node name="CharacterBody2D" type="CharacterBody2D" groups=["Enemies"]]
collision_layer = 2
collision_mask = 19
motion_mode = 1
script = ExtResource("1_qsbif")

[node name="Veggie shooter" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1.90735e-06, -2.86102e-06)
scale = Vector2(1.10625, 1.10625)
texture = ExtResource("2_qf17j")

[node name="RigidBody2D" type="RigidBody2D" parent="." groups=["Enemies"]]
position = Vector2(-11, 1)
collision_layer = 0
collision_mask = 0
mass = 0.001
gravity_scale = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2(1, 9)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_p6xpr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-10, 10)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_p6xpr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4ftcw")
}

[node name="ShootingPoint" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(20, 21)

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 1.25

[node name="TargetRange" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="Collider" type="CollisionShape2D" parent="TargetRange"]
shape = SubResource("CircleShape2D_cq4vn")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="TargetRange" to="." method="_on_target_range_body_entered"]
[connection signal="body_exited" from="TargetRange" to="." method="_on_target_range_body_exited"]
